--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,36 +7,42 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: black; /* Чёрный фон на весь сайт */
+    color: white; /* Белый текст для контраста */
 }
 
 header {
-    background-color: black;
-    color: white;
     text-align: center;
-    padding: 50px 0;
+    padding: 0;
 }
 
-header h1 {
+.container {
+    display: flex;
+    justify-content: center; /* Центрируем содержимое по горизонтали */
+    align-items: center; /* Центрируем содержимое по вертикали */
+    height: 450px; /* Высота контейнера */
+    background: url('../sprites/MainBackground.png') no-repeat center center;
+    background-size: cover; /* Растягиваем картинку по всему фону */
+}
+
+.container h1 {
     font-size: 3em;
+    color: white;
+    padding: 20px;
 }
 
 #about {
-    background-image: url('assets/sprites/MainBackground.png');
-    background-size: cover;
-    background-position: center;
-    color: white;
     text-align: center;
-    padding: 80px 20px;
+    padding: 100px 300px;
 }
 
 #about h2 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
+    font-size: 3.5em;
+    margin-bottom: 40px;
 }
 
 #about p {
-    font-size: 1.2em;
+    font-size: 1.6em;
     line-height: 1.6;
     margin-bottom: 20px;
 }
@@ -47,6 +53,6 @@ header h1 {
 }
 
 #logo img {
-    width: 300px;
+    width: 250px;
     height: auto;
 }
