--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,10 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: black; /* Чёрный фон на весь сайт */
-    color: white; /* Белый текст для контраста */
+    background-color: black;
+    /* Чёрный фон на весь сайт */
+    color: white;
+    /* Белый текст для контраста */
 }
 
 header {
@@ -18,41 +20,151 @@ header {
 
 .container {
     display: flex;
-    justify-content: center; /* Центрируем содержимое по горизонтали */
-    align-items: center; /* Центрируем содержимое по вертикали */
-    height: 450px; /* Высота контейнера */
+    justify-content: center;
+    align-items: center;
+    height: 350px;
     background: url('../sprites/MainBackground.png') no-repeat center center;
-    background-size: cover; /* Растягиваем картинку по всему фону */
+    background-size: cover;
 }
 
 .container h1 {
-    font-size: 3em;
+    font-family: 'Raleway', Arial, sans-serif;
+    font-size: 2.8em;
     color: white;
     padding: 20px;
+    letter-spacing: 3px;
 }
 
 #about {
     text-align: center;
-    padding: 100px 300px;
+    padding: 50px 80px 0 80px;
+}
+
+@media (min-width: 768px) {
+    #about {
+        padding: 50px 180px 0 180px;
+    }
 }
 
 #about h2 {
-    font-size: 3.5em;
-    margin-bottom: 40px;
+    font-size: 3.2em;
+    margin-bottom: 50px;
 }
 
 #about p {
-    font-size: 1.6em;
+    font-size: 1.2em;
     line-height: 1.6;
     margin-bottom: 20px;
 }
 
 #logo {
     text-align: center;
-    padding: 40px 0;
+    padding: 0px 0px;
 }
 
 #logo img {
-    width: 250px;
+    width: 200px;
     height: auto;
+}
+
+/* Стили для меню */
+@font-face {
+    font-family: 'Raleway';
+    src: url('../fonts/raleway.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* Стили для меню */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    padding: 10px 30px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+.navbar-logo {
+    display: flex;
+    align-items: center;
+}
+
+.navbar-logo img {
+    width: 40px;
+    height: auto;
+    margin-right: 20px;
+}
+
+.navbar-logo span {
+    font-family: 'Raleway', Arial, sans-serif;
+    font-size: 1.1em; /* Мобильные устройства */
+    color: white;
+}
+
+.navbar-links {
+    display: flex;
+    gap: 20px;
+}
+
+.navbar-links a {
+    color: #a9a9a9; /* Слегка сероватый цвет */
+    text-decoration: none; /* Убираем подчёркивание */
+    font-size: 0.9em; /* Мобильные устройства */
+    transition: color 0.3s ease; /* Плавное изменение цвета */
+}
+
+.navbar-links a:hover {
+    color: white; /* Белый цвет при наведении */
+    text-decoration: none; /* Убираем подчёркивание */
+}
+
+/* Медиазапрос для ПК */
+@media (min-width: 768px) {
+    .navbar-logo span {
+        font-size: 1.3em; 
+    }
+
+    .navbar-links a {
+        font-size: 1.0em; 
+    }
+}
+/*Нижний колунтитул*/
+footer {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    border-top: 1px solid #333;
+    margin-top: 30px; /* Отступ сверху */
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.footer-left p {
+    margin: 5px 0;
+    font-size: 0.9em;
+}
+
+.footer-right {
+    display: flex;
+    gap: 15px;
+}
+
+.footer-right img {
+    width: 50px;
+    height: auto;
+    transition: opacity 0.3s ease;
+}
+
+.footer-right img:hover {
+    opacity: 0.7;
 }
